fix: interaction sequence, image size, and scrollbar issues in vocab and sentences

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,6 +52,12 @@
 
   html {
     /* scrollbar-gutter: stable; */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+  }
+
+  html::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
   }
 
   body {
